Fixed product layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,8 @@ main
 
 .product-image-container
 {
+    background-size: cover;
+    background-position: center center;
     opacity: 0.8;
     height: 250px;
     overflow: hidden;
@@ -172,14 +174,6 @@ main
 {
     opacity: 1;
     transition: 0.25s;
-}
-
-.product-image
-{
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    object-position: center;
 }
 
 .product-text
